# Attitudes-Towards-Just-Energy-Transition-Initiatives

./: CITATION  README.md  config.py  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
data/: first_sample.csv  main_sample_backup.csv
data/mock_data/: new_mock_data.csv  raw_data_mock.csv
developer/: __init__.py  utilities.py
developer/analysis/: model.py  task_analysis.py
developer/data_management/: __init__.py  cleaning.py  geolocator.py  outdated_task_geo_location.py  renaming_replacing.yaml  specs.yaml  task_data_management.py
developer/final/: __init__.py  plot.py  plot_specs.yaml  task_final.py
paper/: conjoint.tex  conjoint_pres.tex  task_paper.py
sandbox/: checks.ipynb  geodata.ipynb  sandbox_data_cleaning.ipynb  sandbox_data_cleaning_and_checks.ipynb  sandbox_regressions.ipynb  sandbox_sn.ipynb
src/conjoint/: __init__.py
src/conjoint/analysis/: model.py  task_analysis.py
src/conjoint/data/mock_data/: raw_data_mock.csv
src/conjoint/data_management/: __init__.py  clean_data.py  renaming_replacing.yaml  specs.yaml  task_data_management.py
src/conjoint/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
